# lib/api/attachments/attachmentsControllerGetContent.ts
@@ -1,0 +1,37 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import type { Options, UnwrappedResult } from "../.kubb/client";
+import type {
+	AttachmentsControllerGetContentOptions,
+	AttachmentsControllerGetContentResponses,
+} from "../schemas/attachments/AttachmentsControllerGetContent";
+import { client, unwrapResult } from "../.kubb/client";
+
+/**
+ * {@link /v1/attachments/:id/content}
+ */
+export function attachmentsControllerGetContent<
+	ThrowOnError extends boolean = true,
+>(
+	options: Options<AttachmentsControllerGetContentOptions, ThrowOnError>,
+): Promise<
+	UnwrappedResult<AttachmentsControllerGetContentResponses, ThrowOnError>
+> {
+	const { client: request = client, ...config } = options;
+
+	return unwrapResult(
+		request({
+			method: "GET",
+			url: "/v1/attachments/{id}/content",
+			security: [{ type: "http", scheme: "bearer" }],
+			...config,
+			throwOnError: config.throwOnError ?? true,
+		}),
+		config.throwOnError ?? true,
+	) as Promise<
+		UnwrappedResult<AttachmentsControllerGetContentResponses, ThrowOnError>
+	>;
+}
